--- a/ProyectoMaterial/index.html
+++ b/ProyectoMaterial/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>vuematerialdesing</title>
   </head>
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
